test/compile_errors/err_named_arg_unknown.w
//! expect-error: no parameter named 'z'

fn foo(a: i32, b: i32) -> i32:
    a + b

fn main:
    foo(a: 1, z: 2)
